--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
                             <!-- Banner Text -->
                             <div class="banner-text ml-lg-5">
                                 <h2>Hi There!</h2>
-                                <h3 class="d-sm-none d-block text-uppercase headline">I'M <b class="is-visible">Lahav</b></h3>
-                                <h3 class="d-sm-block d-none cd-headline clip text-uppercase">I'M
-                                    <span class="cd-words-wrapper">
-                                        <b class="is-visible">Lahav</b>
-                                        <b class="is-hidden"> A QA Engineer with Automation Expertise:</b>
-                                        <b class="is-hidden"> AN HTML Developer</b>
-                                        <b class="is-hidden">A WEB & APPLICATION Software Tester</b> 
-										<b class="is-hidden">Experienced in writing test documentation (STP, STD, STR)</b>
+                              
+                                        <b >My name is Lahav</b>
+                                        <b > Im A QA Engineer with Automation Expertise:</b>
+                                        <b AN HTML Developer</b>
+                                        <b A WEB & APPLICATION Software Tester</b> 
+										<b "Experienced in writing test documentation (STP, STD, STR)</b>
                                     </span>
                                 </h3>
-                                <p>I am a detail-oriented QA engineer with a strong focus on ensuring software quality through rigorous testing, analysis, and problem-solving.<br></p> I bring expertise and a passion for delivering reliable, user-centric solutions.".</p>
-                                <div class="social-links d-flex flex-wrap">
+<p style="font-size: inherit;">
+    I am a detail-oriented QA engineer with a strong focus on ensuring software quality through rigorous testing, analysis, and problem-solving.<br>
+    I bring expertise and a passion for delivering reliable, user-centric solutions.
+</p>                                <div class="social-links d-flex flex-wrap">
                                     
                                     <a href="https://www.linkedin.com/in/lahav-mauda-980a41130/"target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="LinkedIn">
                                     <i class="fa fa-linkedin"></i>
@@ -153,8 +153,6 @@
                                     <div class="about-details clearfix">
                                         <ul class="float-left w-50 pr-2">
                                             <li class="mb-1"><span>Name :</span> <span>Lahav</span></li>
-                                            <li class="mb-1"><span>Birthdate :</span> <span>10 April 1977</span></li>
-                                            <li class="mb-1"><span>Address :</span> <span>Eliakim</span></li>
                                             <li class="mb-1"><span>Experience :</span> <span>1+ years</span></li>
                                             <li class="mb-1"><span>Freelance :</span> <span>Available</span></li>
                                         </ul>
@@ -727,7 +725,7 @@
                 <!-- Container -->
                 <div class="container">
                     <!-- Copyright -->
-                    <p class="copyright text-center">&copy; 2024 <a href="#">Kamal</a> &nbsp; - &nbsp; All rights reserved.</p>
+                    <p class="copyright text-center">&copy; 2025 <a href="#">Lahav</a> &nbsp; - &nbsp; All rights reserved.</p>
                     <!-- End Copyright -->
                 </div>
                 <!-- End Container -->
