--- a/index.html
+++ b/index.html
@@ -586,7 +586,8 @@
                                                 <li class="mb-1"><strong>Project date</strong>: April 2025</li>
                                                 <li class="mb-1">
   <strong>Project File</strong>: 
-  <a href="https://lahavmauda.github.io/alltrails-final-project/AllTrails%20QA%20Final%20Project%20Manual%20Testing.pdf" target="_blank">
+  <a href="https://lahavmauda.github.io/alltrails-final-project/AllTrails%20QA%20Final%20Project%20%E2%80%93%20Manual%20Testing.pdf
+" target="_blank">
     AllTrails QA Final Project – Manual Testing
   </a>
 </li>
@@ -806,5 +807,6 @@ Very soon, I will publish a project developed during this course, showcasing the
 
     </body>
 </html>
+
 
 
