--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -586,9 +585,13 @@
                                                 <li class="mb-1"><strong>Project date</strong>: April 2025</li>
                                                 <li class="mb-1">
   <strong>Project File</strong>: 
-  <a href="https://lahavmauda.github.io/alltrails-final-project/AllTrails%20QA%20Final%20Project%20%E2%80%93%20Manual%20Testing.pdf
-" target="_blank">
-    AllTrails QA Final Project – Manual Testing
+ 
+<a href="https://lahavmauda.github.io/alltrails-final-project/AllTrails%20QA%20Final%20Project%20Manual%20Testing.pdf" 
+   target="_blank" 
+   style="font-weight: bold;">
+   AllTrails QA Final Project – Manual Testing
+</a>
+
   </a>
 </li>
                                             </ul>
@@ -807,6 +810,4 @@ Very soon, I will publish a project developed during this course, showcasing the
 
     </body>
 </html>
-
-
 
