--- a/index.html
+++ b/index.html
@@ -586,13 +586,13 @@
                                                 <li class="mb-1">
   <strong>Project File</strong>: 
  
-<a href="https://lahavmauda.github.io/alltrails-final-project/AllTrails%20QA%20Final%20Project%20Manual%20Testing.pdf" 
+<a href="https://lahavmauda.github.io/alltrails-final-project/AllTrails%20QA%20Final%20Project%20%E2%80%93%20Manual%20Testing.pdf" 
    target="_blank" 
+   rel="noopener" 
    style="font-weight: bold;">
    AllTrails QA Final Project – Manual Testing
 </a>
 
-  </a>
 </li>
                                             </ul>
                                             <ul class="d-flex flex-row align-items-center text-center">
@@ -810,4 +810,5 @@ Very soon, I will publish a project developed during this course, showcasing the
 
     </body>
 </html>
+
 
